--- a/index.html
+++ b/index.html
@@ -2,25 +2,25 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>APOGEE 16 INTRO</title>
+	<title>Apogee 2016 | International Technical Festival | BITS Pilani</title>
 	
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta http-equiv="content-language" content="EN">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<meta name="description" content = "Apogee, the technical festival of BITS Pilani, is a large scale event that has attracted the connoisseurs of engineering and technology over years. It represents the zenith of science and engineering in a landscape of future visionaries and scientists."/>
-    <meta name = "keywords" content = "apogee, technical Festival, techfest, tech fest, bits pilani, apogee 2016, bits tech fest, bits fest, birla institute of technology and science"/>
-    <meta name="robots" content="index, follow">
-    <meta name="googlebot" content="index, follow">
-    <meta name="copyright" content="Copyright © 2015 Department Of Visual Media, BITS Pilani">
-    <meta name="author" content="Department Of Visual Media, BITS Pilani">
-    <meta name="email" content="webmaster@bits-apogee.org">
-    <meta name="rating" content="general">
-    <meta name="distribution" content="Global">
-    <meta name="revisit-after" content="1 days">
-    <meta name="google-site-verification" content="PgrAJduJyWy5BDAT2lgQ8q_GbwyL_F1SCmUdg1MhVVw" />
+	<meta name = "keywords" content = "apogee, technical Festival, techfest, tech fest, bits pilani, apogee 2016, bits tech fest, bits fest, birla institute of technology and science"/>
+	<meta name="robots" content="index, follow">
+	<meta name="googlebot" content="index, follow">
+	<meta name="copyright" content="Copyright © 2015 Department Of Visual Media, BITS Pilani">
+	<meta name="author" content="Department Of Visual Media, BITS Pilani">
+	<meta name="email" content="webmaster@bits-apogee.org">
+	<meta name="rating" content="general">
+	<meta name="distribution" content="Global">
+	<meta name="revisit-after" content="1 days">
+	<meta name="google-site-verification" content="PgrAJduJyWy5BDAT2lgQ8q_GbwyL_F1SCmUdg1MhVVw" />
 
-    <!-- OPEN GRAPH META DATA-->
-    <meta property="og:title" content="APOGEE 2016 | International Technical Festival">
+	<!-- OPEN GRAPH META DATA-->
+	<meta property="og:title" content="APOGEE 2016 | International Technical Festival">
 	<meta property="og:site_name" content="APOGEE 2016 Intro">
 	<meta property="og:url" content="http://www.bits-apogee.org/">
 	<meta property="og:description" content="Apogee, the tchnical festival of BITS Pilani, is a large scale event that has attracted the connoisseurs of engineering and technology over years. It represents the zenith of science and engineering in a landscape of future visionaries and scientists.">
@@ -31,7 +31,7 @@
 
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<!-- <link href='https://fonts.googleapis.com/css?family=Roboto:700' rel='stylesheet' type='text/css'> -->
-	<link href='https://fonts.googleapis.com/css?family=Raleway:400,900' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700,800,900' rel='stylesheet' type='text/css'>
 	<script type="text/javascript" src="js/jquery.min(1.11.1).js"></script>
 	 <!-- // <script src="https://maps.googleapis.com/maps/api/js"></script>  -->
 	<!-- // <script type="text/javascript" src="js/customMap.js"></script> -->
@@ -76,9 +76,9 @@ html,body {
 .div_title
 {
 	text-align: center;
-    padding: 15px;
-    font-size: 2.5em;
-    display: none;
+	padding: 15px;
+	font-size: 2.5em;
+	display: none;
 }
 
 /*Events*/
@@ -146,7 +146,7 @@ html,body {
 	border-radius: 100%;
 	-webkit-transform: scale(0);
 	  -ms-transform: scale(0);
-	      transform: scale(0);
+		  transform: scale(0);
 	z-index: -1;
 	background: #fff;
 	opacity: 0.7;
@@ -167,14 +167,14 @@ html,body {
 }
 .header .but_head{
 	position: relative;
-    font-size: 3em;
-    color: #000;
-    margin: 10px 0;
-    font-family: 'Raleway', sans-serif;
-    font-weight: 900;
-    /* letter-spacing: 1px; */
-    top: 15px;
-    opacity: 0;
+	font-size: 3em;
+	color: #000;
+	margin: 10px 0;
+	font-family: 'Raleway', sans-serif;
+	font-weight: 900;
+	/* letter-spacing: 1px; */
+	top: 15px;
+	opacity: 0;
 	-moz-transition: top 0.5s ease-in-out,opacity 0.5s ease-in-out;
 	-webkit-transition: top 0.5s ease-in-out,opacity 0.5s ease-in-out;
 	transition: top 0.5s ease-in-out,opacity 0.5s ease-in-out;
@@ -209,9 +209,9 @@ html,body {
   border-radius: none;
   border: none;
   cursor: pointer;
-  	-moz-transition: all 0.2s ease-in-out;
-    -webkit-transition: all 0.2s ease-in-out;
-    transition: all 0.2s ease-in-out;
+	-moz-transition: all 0.2s ease-in-out;
+	-webkit-transition: all 0.2s ease-in-out;
+	transition: all 0.2s ease-in-out;
 }
 
 .c-hamburger:hover
@@ -234,8 +234,8 @@ html,body {
   width: 50%;
   background: black;
 	-moz-transition: all 0.2s ease-in-out;
-    -webkit-transition: all 0.2s ease-in-out;
-    transition: all 0.2s ease-in-out;  
+	-webkit-transition: all 0.2s ease-in-out;
+	transition: all 0.2s ease-in-out;  
 }
 .c-hamburger:hover span
 {
@@ -266,9 +266,9 @@ html,body {
 }
 
 .c-hamburger--htx span {
-  	-moz-transition: all 0.2s ease-in-out;
-    -webkit-transition: all 0.2s ease-in-out;
-    transition: all 0.2s ease-in-out;
+	-moz-transition: all 0.2s ease-in-out;
+	-webkit-transition: all 0.2s ease-in-out;
+	transition: all 0.2s ease-in-out;
 }
 
 .c-hamburger--htx span::before,
@@ -314,19 +314,19 @@ html,body {
 
 /*Links*/
 #social{
-    position: absolute;
-    top: 100%;
-    height: 40px;
-    width: 200px;
-    left: 0;
-    right: 0;
-    border-top: 1px solid black;
-    padding-top: 20px;
-    margin: auto;
-    margin-top: 10px;
-    background: transparent;
-    z-index: 1;
-    display: none;
+	position: absolute;
+	top: 100%;
+	height: 40px;
+	width: 200px;
+	left: 0;
+	right: 0;
+	border-top: 1px solid black;
+	padding-top: 20px;
+	margin: auto;
+	margin-top: 10px;
+	background: transparent;
+	z-index: 1;
+	display: none;
 }
 #facebook,#twitter,#gplus,#youtube{
 	height: 40px;
@@ -384,11 +384,11 @@ object{
 		.speaker
 		{
 			position: relative;
-    		width: 200px;
-    		height: 275px;
-    		margin: 10px 25px;
-    		cursor: pointer;
-    		display: inline-block;
+			width: 200px;
+			height: 275px;
+			margin: 10px 25px;
+			cursor: pointer;
+			display: inline-block;
 		}
 
 		.spk_img
@@ -404,7 +404,7 @@ object{
 		{
 			position: absolute;
 			left: -900px;
-    		top: -870px;
+			top: -870px;
 			border-radius: 100%;
 			width: 2000px;
 			height: 2000px;
@@ -414,8 +414,8 @@ object{
 			-o-transform      : scale(0.1);
 			transform         : scale(0.1);
 			-moz-transition: all 0.5s ease-in;
-		    -webkit-transition: all 0.5s ease-in;
-		    transition: all 0.5s ease-in;
+			-webkit-transition: all 0.5s ease-in;
+			transition: all 0.5s ease-in;
 		}
 		.spk_imga
 		{
@@ -430,9 +430,9 @@ object{
 			background-position: center bottom;
 			background-size: 100% auto;
 			background-repeat: no-repeat;
-		    -moz-transition: all 0.3s ease-in-out;
-		    -webkit-transition: all 0.3s ease-in-out;
-		    transition: all 0.3s ease-in-out;
+			-moz-transition: all 0.3s ease-in-out;
+			-webkit-transition: all 0.3s ease-in-out;
+			transition: all 0.3s ease-in-out;
 		}
 		.speaker:hover .spk_imga
 		{
@@ -553,6 +553,13 @@ object{
 	text-align: center;
 	background-color: #fff;
 }
+
+#spk_desc {
+    line-height: 28px;
+    font-size: 19px;
+    font-weight: 200;
+}
+
 #spk_content{
 	position: relative;
 	display: none;
@@ -618,15 +625,15 @@ object{
 	width: 65%;
 }
 #name_slide:after {
-    content: "";
-    left: 50%;
-    height: 1px;
-    opacity: 0.8;
-    width: 180px;
-    bottom: -18px;
-    margin-left: -90px;
-    position: absolute;
-    background: currentColor;
+	content: "";
+	left: 50%;
+	height: 1px;
+	opacity: 0.8;
+	width: 180px;
+	bottom: -18px;
+	margin-left: -90px;
+	position: absolute;
+	background: currentColor;
 }
 #name_prev,#name_next{
 	font-size: 2.5em;
@@ -666,8 +673,8 @@ object{
 	-o-transform      : scale(0.5);
 	transform         : scale(0.5);
 	-moz-transition: all 0.25s ease-in;
-    -webkit-transition: all 0.25s ease-in;
-    transition: all 0.25s ease-in;
+	-webkit-transition: all 0.25s ease-in;
+	transition: all 0.25s ease-in;
 }
 .spk_sta_imga
 {	
@@ -683,9 +690,9 @@ object{
 	background-position: center 400%;
 	background-size: 100% auto;
 	background-repeat: no-repeat;
-    -moz-transition: all 0.2s ease-in;
-    -webkit-transition: all 0.2s ease-in;
-    transition: all 0.2s ease-in;
+	-moz-transition: all 0.2s ease-in;
+	-webkit-transition: all 0.2s ease-in;
+	transition: all 0.2s ease-in;
 }
 #spk_det_fill {
 	position: absolute;
@@ -699,7 +706,7 @@ object{
 	border-radius: 100%;
 	-webkit-transform: scale(0);
 	  -ms-transform: scale(0);
-	      transform: scale(0);
+		  transform: scale(0);
 	-moz-transition: moz-transform 0.4s ease-out;
 	-webkit-transition: -webkit-transform 0.4s ease-out;
 	transition: transform 0.4s ease-out;
@@ -710,9 +717,9 @@ object{
 /*-----------------------------CONTACTS----------------------------------*/
 #contacts
 {
-    background-color: #3A474A;
-    color: white;
-    letter-spacing: 1px;
+	background-color: #3A474A;
+	color: white;
+	letter-spacing: 1px;
 }
 
 .contactinfo
@@ -728,7 +735,7 @@ object{
 
 @media screen and (max-width: 600px) {
 
-    .contactinfo
+	.contactinfo
 	{
 		margin: 19px;
 	}	
@@ -753,25 +760,25 @@ object{
 
 .contactinfo>div:nth-child(3)
 {
-    text-align: center;
-    font-size: 0.9em;
-    line-height: 1.4em;
+	text-align: center;
+	font-size: 0.9em;
+	line-height: 1.4em;
 }
 
 .fb_link
 {
 	position: absolute;
-    bottom: 5%;
-    height: 45px;
-    width: 45px;
-    right: 12%;
-    background-color: #3b5998;
-    -moz-transition: .3s ease-in-out;
-    -webkit-transition: .3s ease-in-out;
-    transition: .3s ease-in-out;
-    border-radius: 50%;
-    padding: 5px;
-    border: 3px solid #fff;
+	bottom: 5%;
+	height: 45px;
+	width: 45px;
+	right: 12%;
+	background-color: #3b5998;
+	-moz-transition: .3s ease-in-out;
+	-webkit-transition: .3s ease-in-out;
+	transition: .3s ease-in-out;
+	border-radius: 50%;
+	padding: 5px;
+	border: 3px solid #fff;
 }
 .fb_link:hover
 {
@@ -816,115 +823,115 @@ object{
 
 /*About*/
 #logo-animation {
-    position: absolute;
-    left: 0px;
-    width: 30%;
-    height: 30vw;
-    border: 0;
-    margin: 100px 10%;
+	position: absolute;
+	left: 0px;
+	width: 30%;
+	height: 30vw;
+	border: 0;
+	margin: 100px 10%;
 }
 .logo-layers {
-    position: absolute;
-    opacity: 1;
-    margin: auto;
-    left: 0px;
-    right: 0px;
-    width: 100%;
+	position: absolute;
+	opacity: 1;
+	margin: auto;
+	left: 0px;
+	right: 0px;
+	width: 100%;
 }
 #logo-layer1 {
-    -moz-transition: 1s cubic-bezier(0.175, 0.885, 0.32, 1.275) 1.5s;
-    -webkit-transition: 1s cubic-bezier(0.175, 0.885, 0.32, 1.275) 1.5s;
-    transition: 1s cubic-bezier(0.175, 0.885, 0.32, 1.275) 1.5s;
+	-moz-transition: 1s cubic-bezier(0.175, 0.885, 0.32, 1.275) 1.5s;
+	-webkit-transition: 1s cubic-bezier(0.175, 0.885, 0.32, 1.275) 1.5s;
+	transition: 1s cubic-bezier(0.175, 0.885, 0.32, 1.275) 1.5s;
 }
 #logo-layer2 {
-    transition: 1s cubic-bezier(0.175, 0.885, 0.32, 1.275) 1.25s;
-    -webkit-transition: 1s cubic-bezier(0.175, 0.885, 0.32, 1.275) 1.25s;
+	transition: 1s cubic-bezier(0.175, 0.885, 0.32, 1.275) 1.25s;
+	-webkit-transition: 1s cubic-bezier(0.175, 0.885, 0.32, 1.275) 1.25s;
 }
 #logo-layer3 {
-    transition: 1s cubic-bezier(0.175, 0.885, 0.32, 1.275) 1s;
-    -webkit-transition: 1s cubic-bezier(0.175, 0.885, 0.32, 1.275) 1s;
+	transition: 1s cubic-bezier(0.175, 0.885, 0.32, 1.275) 1s;
+	-webkit-transition: 1s cubic-bezier(0.175, 0.885, 0.32, 1.275) 1s;
 }
 #logo-layer4 {
-    transition: 1.5s cubic-bezier(0.175, 0.885, 0.32, 1.275) 0.5s;
-    -webkit-transition: 1.5s cubic-bezier(0.175, 0.885, 0.32, 1.275) 0.5s;
+	transition: 1.5s cubic-bezier(0.175, 0.885, 0.32, 1.275) 0.5s;
+	-webkit-transition: 1.5s cubic-bezier(0.175, 0.885, 0.32, 1.275) 0.5s;
 }
 #logo-layer5 {
-    transition: 1.5s ease 3s;
-    -webkit-transition: 1.5s ease 3s;
+	transition: 1.5s ease 3s;
+	-webkit-transition: 1.5s ease 3s;
 }
 #about.outViewPort img#logo-layer1 {
-    left: -150px;
-    opacity: 0;
-    transition: 0s ease;
-    -webkit-transition: 0s ease;
+	left: -150px;
+	opacity: 0;
+	transition: 0s ease;
+	-webkit-transition: 0s ease;
 }
 #about.outViewPort img#logo-layer2 {
-    left: 150px;
-    opacity: 0;
-    transition: 0s ease;
-    -webkit-transition: 0s ease;
+	left: 150px;
+	opacity: 0;
+	transition: 0s ease;
+	-webkit-transition: 0s ease;
 }
 #about.outViewPort img#logo-layer3 {
-    left: -150px;
-    opacity: 0;
-    transition: 0s ease;
-    -webkit-transition: 0s ease;
+	left: -150px;
+	opacity: 0;
+	transition: 0s ease;
+	-webkit-transition: 0s ease;
 }
 #about.outViewPort img#logo-layer4 {
-    left: 150px;
-    opacity: 0;
-    transition: 0s ease;
-    -webkit-transition: 0s ease;
+	left: 150px;
+	opacity: 0;
+	transition: 0s ease;
+	-webkit-transition: 0s ease;
 }
 #about.outViewPort img#logo-layer5 {
-    opacity: 0;
-    transition: 0s ease;
-    -webkit-transition: 0s ease;
+	opacity: 0;
+	transition: 0s ease;
+	-webkit-transition: 0s ease;
 }
 #about.outViewPort > div#aboutdescription {
-    right: -150px;
-    opacity: 0;
-    transition: 0s ease;
-    -webkit-transition: 0s ease;
+	right: -150px;
+	opacity: 0;
+	transition: 0s ease;
+	-webkit-transition: 0s ease;
 }
 #aboutdescription {
-    opacity: 1;
-    transition: 0.5s ease;
-    -webkit-transition: 0.5s ease;
-    position: absolute;
-    width: 45%;
-    right: 5%;
-    top: 50px;
-    padding-bottom: 25px;
+	opacity: 1;
+	transition: 0.5s ease;
+	-webkit-transition: 0.5s ease;
+	position: absolute;
+	width: 45%;
+	right: 5%;
+	top: 50px;
+	padding-bottom: 25px;
 }
 p.title1 {
-    font-family: 'Open Sans', Arial;
-    font-weight: 400;
-    color: #2f3132;
-    font-size: 2.5em;
-    text-shadow: 1px 1px white;
-    margin: 5px 0;
+	font-family: 'Open Sans', Arial;
+	font-weight: 400;
+	color: #2f3132;
+	font-size: 2.5em;
+	text-shadow: 1px 1px white;
+	margin: 5px 0;
 }
 p.content {
-    font-family: 'Open Sans', Arial;
-    font-weight: 300;
-    font-size: 130%;
-    text-shadow: 1px 1px white;
-    color: #333;
+	font-family: 'Open Sans', Arial;
+	font-weight: 300;
+	font-size: 130%;
+	text-shadow: 1px 1px white;
+	color: #333;
 }
 @media screen and (max-width: 750px){
 	#logo-animation {
-	    position: relative;
-	    width: 45%;
-	    height: 45vw;
-	    margin: auto;
+		position: relative;
+		width: 45%;
+		height: 45vw;
+		margin: auto;
 	}
 	#aboutdescription {
 		position: relative;
-	    margin: auto;
-	    width: 70%;
-	    top:0;
-	    right: 0;
+		margin: auto;
+		width: 70%;
+		top:0;
+		right: 0;
 	}
 }
 /*About END*/
@@ -940,15 +947,15 @@ p.content {
 	display: inline-block;
 	margin: 25px;
 	width: 200px;
-    height: 200px;
-    border: 1px solid #ddd;
-    /*background: url("images/sponsback.jpg") no-repeat center center #f9f9f9;*/
-    background-color: white;
+	height: 200px;
+	border: 1px solid #ddd;
+	/*background: url("images/sponsback.jpg") no-repeat center center #f9f9f9;*/
+	background-color: white;
  
-    box-shadow: 3px 3px 20px -1px #444;
-    -moz-transition: all 0.2s ease-in;
-    -webkit-transition: all 0.2s ease-in;
-    transition: all 0.2s ease-in;
+	box-shadow: 3px 3px 20px -1px #444;
+	-moz-transition: all 0.2s ease-in;
+	-webkit-transition: all 0.2s ease-in;
+	transition: all 0.2s ease-in;
 }
 
 .spons_cont:hover{
@@ -985,9 +992,9 @@ p.content {
 	text-align: left;
 	max-width: 600px;
 	left: 0;
-    right: 0;
-    margin: auto;
-    border-radius: 2px;
+	right: 0;
+	margin: auto;
+	border-radius: 2px;
 }
 #regform>form
 {
@@ -1009,14 +1016,14 @@ p.content {
 #regdes
 {
 	
-    vertical-align: top;
-    padding: 20px;
-    font-size: 2em;
-    line-height: 1.4em;
-    max-width: 900px;
-    left: 0;
-    right: 0;
-    margin: 30px auto 30px auto ;
+	vertical-align: top;
+	padding: 20px;
+	font-size: 2em;
+	line-height: 1.4em;
+	max-width: 900px;
+	left: 0;
+	right: 0;
+	margin: 30px auto 30px auto ;
 }
 		/* form starting stylings ------------------------------- */
 .group        { 
@@ -1114,8 +1121,8 @@ button
 	width: 100px;
 	outline: none;
 	-moz-transition: all 0.2s ease-in;
-    -webkit-transition: all 0.2s ease-in;
-    transition: all 0.2s ease-in;
+	-webkit-transition: all 0.2s ease-in;
+	transition: all 0.2s ease-in;
 }
 button:hover
 {
@@ -1171,7 +1178,7 @@ button:hover
 <div id="about" class="div_content"  style="display:none;">
 	<div id="logo-animation">
 		<img id="logo-layer1" class="logo-layers" src="images/logo_layers/layer 1.png">
-        <img id="logo-layer2" class="logo-layers" src="images/logo_layers/layer 2.png">
+		<img id="logo-layer2" class="logo-layers" src="images/logo_layers/layer 2.png">
 		<img id="logo-layer3" class="logo-layers" src="images/logo_layers/layer 3.png">
 		<img id="logo-layer4" class="logo-layers" src="images/logo_layers/layer 4.png">
 		<img id="logo-layer5" class="logo-layers" src="images/logo_layers/layer 5.png">
