--- a/index.html
+++ b/index.html
@@ -358,9 +358,9 @@ object{
 		.speaker
 		{
 			position: relative;
-    		width: 200px;
+    		width: 265px;
     		height: 275px;
-    		margin: 25px;
+    		margin: 15px 25px 15px 25px;
     		cursor: pointer;
     		display: inline-block;
 		}
@@ -373,6 +373,9 @@ object{
 			width: 200px;
 			height: 230px;
 			position: relative;
+			left: 0;
+    		right: 0;
+    		margin: auto;
 		}
 		.spk_imgc
 		{
@@ -426,7 +429,8 @@ object{
 		  position: relative;
 		  color: #000;
 		  text-decoration: none;
-		  font-size: 1.2em;
+		  font-size: 1.1em;
+		  text-transform: uppercase;
 		}
 		.speaker:hover a{
 			color: inherit;
@@ -771,7 +775,7 @@ object{
 .contact_data
 {
 	text-align: center;
-	max-width: 1200px;
+	max-width: 1260px;
 	left:0;
 	right: 0;
 	margin: auto;
@@ -1119,18 +1123,31 @@ button:hover
 			<div class="but_head" style="transition-delay: 0.35s"><span>CONTACTS</span></div>
 		
 			<div id="social">
+
+				<a href="http://www.facebook.com">
 				<div id="gplus">
-					<object type="image/svg+xml" data="images/gplus.svg">G+</object>			
+					<?xml version="1.0" ?><!DOCTYPE svg  PUBLIC '-//W3C//DTD SVG 1.1//EN'  'http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd'><svg class="gi" height="40px" id="Layer_1" style="enable-background:new 0 0 40 40;" version="1.1" viewBox="0 0 128 128" width="40px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><style type="text/css"><![CDATA[.st0{fill-rule:evenodd;clip-rule:evenodd;}svg .gi { cursor: pointer;transition: 200ms;transition-timing-function: ease-in-out;-webkit-transition: 200ms;-webkit-transition-timing-function: ease-in-out;fill:#000;}.gi:hover { fill: #d34836;}]]></style><g><path d="M79.254,9.939H50.854c-3.764,0-7.801,0.438-12.111,1.315c-4.35,1.024-8.544,3.189-12.58,6.512   c-5.883,5.68-8.82,12.004-8.82,18.979c0,5.769,2.075,10.824,6.229,15.17c3.964,4.661,9.726,7.04,17.288,7.135   c1.424,0,2.946-0.095,4.559-0.278c-0.265,0.748-0.556,1.551-0.867,2.439c-0.355,0.831-0.532,1.882-0.532,3.135   c0,2.083,0.463,3.874,1.399,5.361c0.8,1.53,1.713,2.969,2.739,4.317c-3.316,0.088-7.476,0.507-12.489,1.241   c-5.064,0.878-9.896,2.633-14.491,5.255c-4.099,2.443-6.929,5.281-8.486,8.502c-1.618,3.226-2.42,6.161-2.42,8.785   c0,5.394,2.479,10.023,7.425,13.899c4.907,4.142,12.332,6.264,22.279,6.353c11.882-0.182,20.978-3.018,27.273-8.517   c6.077-5.317,9.119-11.41,9.119-18.292c-0.094-4.845-1.2-8.769-3.325-11.775c-2.256-2.957-4.881-5.646-7.873-8.099l-4.819-3.948   c-0.694-0.693-1.415-1.503-2.148-2.426c-0.87-0.969-1.303-2.188-1.303-3.677c0-1.522,0.425-2.859,1.269-4.013   c0.72-1.112,1.499-2.103,2.349-2.979c1.478-1.292,2.872-2.567,4.184-3.808c1.186-1.25,2.308-2.611,3.361-4.088   c2.162-3.051,3.286-7.112,3.366-12.192c0-2.77-0.312-5.197-0.935-7.274c-0.761-2.08-1.632-3.876-2.613-5.403   c-1.027-1.611-2.071-2.977-3.141-4.085c-1.113-1.064-2.113-1.871-3.009-2.425h8.755L79.254,9.939z M63.691,87.382   c2.346,2.677,3.521,5.812,3.521,9.419c0,4.438-1.718,8.061-5.156,10.882c-3.522,2.863-8.632,4.339-15.324,4.435   c-7.463-0.096-13.339-1.757-17.638-4.988c-4.52-3.233-6.773-7.346-6.773-12.336c0-2.538,0.512-4.708,1.557-6.509   c0.899-1.712,2.008-3.144,3.32-4.297c1.359-1.106,2.692-1.964,4.002-2.564c1.312-0.553,2.326-0.971,3.05-1.246   c3.075-0.925,6.084-1.595,9.023-2.011c2.982-0.276,4.837-0.365,5.56-0.276c1.217,0,2.28,0.043,3.188,0.139   C57.314,81.728,61.201,84.843,63.691,87.382z M59.078,45.595c-0.342,1.897-1.113,3.749-2.318,5.552   c-2.489,2.546-5.604,3.892-9.343,4.03c-2.961,0-5.59-0.902-7.888-2.71c-2.307-1.804-4.181-4.001-5.638-6.592   c-3.005-5.556-4.505-10.896-4.505-16.029c-0.097-3.888,0.933-7.405,3.084-10.549c2.553-3.01,5.75-4.561,9.599-4.654   c2.908,0.093,5.481,0.954,7.719,2.566c2.192,1.71,3.961,3.937,5.306,6.664c2.863,5.686,4.296,11.337,4.296,16.931   C59.39,42.104,59.283,43.696,59.078,45.595z"/><polygon points="102.828,25.451 102.828,10.546 95.608,10.546 95.608,25.451 80.709,25.451 80.709,32.669 95.608,32.669    95.608,47.568 102.828,47.568 102.828,32.669 117.727,32.669 117.727,25.451  "/></g></svg>		
 				</div>
+				</a>
+
+				<a href="https://www.facebook.com/bitsapogee">
 				<div id="facebook">
-					<object type="image/svg+xml" data="images/facebook.svg">f</object>			
+					<?xml version="1.0" ?><!DOCTYPE svg  PUBLIC "-//W3C//DTD SVG 1.1//EN"  "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd"><svg class="fi" enable-background="new 0 0 40 40" height="40px" id="Layer_1" version="1.1" viewBox="0 0 56.693 56.693" width="40px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><style type="text/css"><![CDATA[svg .fi { cursor: pointer;transition: 200ms;transition-timing-function: ease-in-out;-webkit-transition: 200ms;-webkit-transition-timing-function: ease-in-out;fill:#000;} .fi:hover { fill: #3b5998;}]]></style><path d="M40.43,21.739h-7.645v-5.014c0-1.883,1.248-2.322,2.127-2.322c0.877,0,5.395,0,5.395,0V6.125l-7.43-0.029  c-8.248,0-10.125,6.174-10.125,10.125v5.518h-4.77v8.53h4.77c0,10.947,0,24.137,0,24.137h10.033c0,0,0-13.32,0-24.137h6.77  L40.43,21.739z"/></svg>	
 				</div>
+				</a>
+
+				<a href="http://www.twitter.com">
 				<div id="twitter">
-					<object type="image/svg+xml" data="images/twitter.svg">t</object>			
+					<?xml version="1.0" ?><!DOCTYPE svg  PUBLIC '-//W3C//DTD SVG 1.1//EN'  'http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd'><svg enable-background="new 0 0 56.693 56.693" class="ti" height="40px" id="Layer_1" version="1.1" viewBox="0 0 56.693 56.693" width="40px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><style type="text/css"><![CDATA[svg ti { cursor: pointer;transition: 200ms;transition-timing-function: ease-in-out;-webkit-transition: 200ms;-webkit-transition-timing-function: ease-in-out;}.ti:hover { fill: #4099ff;}]]></style><path d="M52.837,15.065c-1.811,0.805-3.76,1.348-5.805,1.591c2.088-1.25,3.689-3.23,4.444-5.592c-1.953,1.159-4.115,2-6.418,2.454  c-1.843-1.964-4.47-3.192-7.377-3.192c-5.581,0-10.106,4.525-10.106,10.107c0,0.791,0.089,1.562,0.262,2.303  c-8.4-0.422-15.848-4.445-20.833-10.56c-0.87,1.492-1.368,3.228-1.368,5.082c0,3.506,1.784,6.6,4.496,8.412  c-1.656-0.053-3.215-0.508-4.578-1.265c-0.001,0.042-0.001,0.085-0.001,0.128c0,4.896,3.484,8.98,8.108,9.91  c-0.848,0.23-1.741,0.354-2.663,0.354c-0.652,0-1.285-0.063-1.902-0.182c1.287,4.015,5.019,6.938,9.441,7.019  c-3.459,2.711-7.816,4.327-12.552,4.327c-0.815,0-1.62-0.048-2.411-0.142c4.474,2.869,9.786,4.541,15.493,4.541  c18.591,0,28.756-15.4,28.756-28.756c0-0.438-0.009-0.875-0.028-1.309C49.769,18.873,51.483,17.092,52.837,15.065z"/></svg>		
 				</div>
+				</a>
+
+				<a href="https://www.youtube.com/playlist?list=PLnx9KurOVkQPXKolMJ3w9OErFU41QQw80">
 				<div id="youtube">
-					<object type="image/svg+xml" data="images/youtube.svg">Y</object>			
+					<?xml version="1.0" ?><svg class="yi" height="36px" version="1.1" viewBox="0 0 20 16" width="45px" xmlns="http://www.w3.org/2000/svg" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns" xmlns:xlink="http://www.w3.org/1999/xlink" style="margin-left: 5px;"><style type="text/css"><![CDATA[svg .yi { cursor: pointer;transition: 200ms;transition-timing-function: ease-in-out;-webkit-transition: 200ms;-webkit-transition-timing-function: ease-in-out;margin-top: 5px;}.yi:hover { fill: #c4302b;}]]></style><path d="M18,0.4 C17.4,0.2 13.7,0 10,0 C6.3,0 2.6,0.2 2,0.4 C0.4,0.9 0,4.4 0,8 C0,11.6 0.4,15.1 2,15.6 C2.6,15.8 6.3,16 10,16 C13.7,16 17.4,15.8 18,15.6 C19.6,15.1 20,11.6 20,8 C20,4.4 19.6,0.9 18,0.4 L18,0.4 Z M8,12.5 L8,3.5 L14,8 L8,12.5 L8,12.5 Z" id="Shape"/></svg>	
 				</div>
+				</a>
+
 			</div>
 		</div>
 	</div>
@@ -1190,7 +1207,7 @@ button:hover
 	</div>
 </div>
 
-<div id="thinkagain" style="display:none;" class="div_content">
+<div id="thinkagain" class="div_content" style="display:block;">
 	<div class="contact_data">
 		<!-- elements added dynamically -->
 		<!-- <div class="speaker">
@@ -1236,7 +1253,7 @@ button:hover
 </div>
 
 
-<div id="reg" class="div_content" style="display:block;">
+<div id="reg" class="div_content" >
 	<div class="div_title">REGISTRATION</div>
 	<div style="text-align:center;">
 		<div id="regdes">Fill in the form to register for APOGEE 2016 and stay notified with the latest updates.</div>
@@ -1753,7 +1770,7 @@ sponsload();
 	var dt="";
 	for(i=0;i<contacts_data.length;++i)
 	{
-		dt+= '<div class="contactinfo"><div class="contact_dept">'+contacts_data[i].dept+'</div><div style="position:relative"><img src="'+ contacts_data[i].img_url+'" class="contact_img" /><a href="'+ contacts_data[i].fb_link +'" target="_blank"><div class="fb_link" ><?xml version="1.0" ?><!DOCTYPE svg  PUBLIC "-//W3C//DTD SVG 1.1//EN"  "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd"><svg enable-background="new 0 0 56.693 56.693" height="30px" id="Layer_1" version="1.1" viewBox="0 0 56.693 56.693" width="30px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><style type="text/css"><![CDATA[svg { cursor: pointer;transition: 200ms;transition-timing-function: ease-in-out;-webkit-transition: 200ms;-webkit-transition-timing-function: ease-in-out;fill:#fff;}svg:hover { fill: #3b5998;}]]></style><path d="M40.43,21.739h-7.645v-5.014c0-1.883,1.248-2.322,2.127-2.322c0.877,0,5.395,0,5.395,0V6.125l-7.43-0.029  c-8.248,0-10.125,6.174-10.125,10.125v5.518h-4.77v8.53h4.77c0,10.947,0,24.137,0,24.137h10.033c0,0,0-13.32,0-24.137h6.77  L40.43,21.739z"/></svg></div></a></div><div class="contact_det">'+contacts_data[i].cname +'<br>'+contacts_data[i].phone +'<br>'+contacts_data[i].email+'</div></div>';
+		dt+= '<div class="contactinfo"><div class="contact_dept">'+contacts_data[i].dept+'</div><div style="position:relative"><img src="'+ contacts_data[i].img_url+'" class="contact_img" /><a href="'+ contacts_data[i].fb_link +'" target="_blank"><div class="fb_link" ><?xml version="1.0" ?><!DOCTYPE svg  PUBLIC "-//W3C//DTD SVG 1.1//EN"  "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd"><svg class="confb" enable-background="new 0 0 56.693 56.693" height="30px" id="Layer_1" version="1.1" viewBox="0 0 56.693 56.693" width="30px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><style type="text/css"><![CDATA[svg .confb{ cursor: pointer;transition: 200ms;transition-timing-function: ease-in-out;-webkit-transition: 200ms;-webkit-transition-timing-function: ease-in-out;fill:#fff;}svg:hover .confb { fill: #3b5998;}]]></style><path d="M40.43,21.739h-7.645v-5.014c0-1.883,1.248-2.322,2.127-2.322c0.877,0,5.395,0,5.395,0V6.125l-7.43-0.029  c-8.248,0-10.125,6.174-10.125,10.125v5.518h-4.77v8.53h4.77c0,10.947,0,24.137,0,24.137h10.033c0,0,0-13.32,0-24.137h6.77  L40.43,21.739z"/></svg></div></a></div><div class="contact_det">'+contacts_data[i].cname +'<br>'+contacts_data[i].phone +'<br>'+contacts_data[i].email+'</div></div>';
 	}
 
 	$('#c_data').html(dt);
