--- a/index.html
+++ b/index.html
@@ -547,7 +547,7 @@ object{
 	top:0;
 	left:0;
 	width:100vw;
-	height: 100vh;
+	min-height: 100vh;
 	display: none;
 }
 #spk_content_cont{
@@ -568,9 +568,11 @@ object{
 }
 
 #spk_content{
-	position: relative;
+	position: absolute;
 	display: none;
 	width: 80%;
+	left:0;
+	right: 0;
 	margin: auto;
 	top:45%;
 	-moz-transform: translateY(-50%);
@@ -591,7 +593,7 @@ object{
 
 #spk_back{
 	text-align: center;
-	position: absolute;
+	position: fixed;
 	z-index: 2;
 	top: 15px;
 	left: 15px;
@@ -602,6 +604,7 @@ object{
 	height: 45px;
 	box-shadow: 0px 0px 5px 1px black;
 	cursor: pointer;
+	background-color: #fff;
 	display: none;
 }
 #arrow_box{
@@ -616,11 +619,8 @@ object{
 	-webkit-transform: rotate(45deg);
 	transform: rotate(45deg);
 }
-#spk_content{
-
-}
 #spk_details_img{
-	position: absolute;
+	position: fixed;
 	top: 0;
 	right:0;
 	width: 50vw;
@@ -1080,18 +1080,16 @@ button:hover
 @media screen and (max-width: 1000px) {
 	#spk_content_cont{
 	    position: relative;
-	    top: 0;
 	    height: auto;
 	    min-height: 100vh;
-	    margin-top: -25px;
 	}
 	#spk_content{
-		top: 50px;
-		margin-top: 25px;
-		padding-top: 25px;
-		-moz-transform: none;
-		-webkit-transform: none;
-		transform: none;
+		position: relative;
+	    padding-top: 50px;
+	    padding-bottom: 15px;
+	    -moz-transform: none;
+	    -webkit-transform: none;
+	    transform: none;
 	}
 }
 </style>
